# RP_tools

./: README.md  agents.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md  nuclides.json
docs/: README.md
gaussian_plume/: README.md  __init__.py  dispersion.py  dry_deposition.py  grid.py  plume.py  wet_deposition.py
tests/: README.md  conftest.py  test_dry_deposition.py  test_gaussian_plume.py  test_grid.py  test_ground_plane_dose.py  test_icrp_data.py  test_immersion_dose.py  test_nuclide.py  test_radioactive_decay.py  test_unit_conversion.py  test_wet_deposition.py
utilities/: README.md  __init__.py  ground_plane_dose.py  icrp_data.py  immersion_dose.py  nuclide.py  radioactive_decay.py  unit_conversion.py
