[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rp-tools"
version = "0.1.0"
description = "A collection of radiation protection calculation tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "flake8>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["utilities", "gaussian_plume"]

[tool.pytest.ini_options]
pythonpath = ["."]
